[package]
name = "image-max-min-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
rand = "*"

[[bench]]
name = "my_benchmark"
harness = false
